--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,17 +14,20 @@
 
     <!-- Nav Bar - Login/Logout -->
     {% if current_user.is_anonymous %}
-    <a href="{{ url_for('login') }}">Logout</a>
+    <a href="{{ url_for('login') }}">Login</a>
+    <a href="{{ url_for('register') }}">Register</a>
     {% else %}
     <a href="{{ url_for('logout') }}">Logout</a>
     {% endif %}
 
     <!-- Nav Bar - Profile -->
+    {% if not current_user.is_anonymous %}
     <a href="{{ url_for('user', user_id=current_user.user_id) }}">Profile</a>
+    {% endif %}
 
     <!-- Nav Bar - Edit Profile -->
-    {% if current_user.is_anonymous %}
-    <a href="{{ url_for('edit_profile') }}">Profile</a>
+    {% if not current_user.is_anonymous %}
+    <a href="{{ url_for('edit_profile') }}">Edit Profile</a>
     {% endif %}
 
     <!-- Error Checking -->
