--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,6 +9,9 @@
             {% if user.about_me %}
             <p>{{ user.about_me }}</p>
             {% endif %}
+            {% if user == current_user %}
+            <a href="{{ url_for('edit_profile') }}">Edit Profile</a>
+            {% endif %}
         </td>
     </tr>
 </table>
